<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20sp"
    >

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/app_name"-->
<!--        android:textSize="20sp"-->
<!--        android:background="@color/colorPrimary"-->
<!--        android:textColor="@color/colorText"-->
<!--        android:padding="15sp"-->
<!--        ></TextView>-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:src="@drawable/flame"
        ></ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:padding="10sp"
        ></TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textSize="18sp"
        android:padding="10sp"
        ></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:padding="10sp"
        ></TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textSize="18sp"
        android:padding="10sp"
        ></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginLeft="10sp"
            ></Button>
        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="5sp"
            android:onClick="next"
            ></Button>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member"
        android:gravity="center"
        android:textSize="18sp"
        ></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        ></TextView>

</LinearLayout>



