<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0px"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_add_shopping_cart_black_24dp"
                android:background="@drawable/bg2"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                ></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_order"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimaryText"
                ></TextView>
            <view
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDivider"
                android:padding="10dp"
                ></view>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_order_hint"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                ></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0px"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_assignment_black_24dp"
                android:background="@drawable/bg1"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                ></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/past_order"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimaryText"
                ></TextView>
            <view
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDivider"
                android:padding="10dp"
                ></view>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/past_order_hint"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                ></TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0px"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_drive_eta_black_24dp"
                android:background="@drawable/bg3"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                ></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deliveries"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimaryText"
                ></TextView>
            <view
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDivider"
                android:padding="10dp"
                ></view>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deliveries_hint"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0px"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_do_not_disturb_alt_black_24dp"
                android:background="@drawable/bg4"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                ></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelled"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimaryText"
                ></TextView>
            <view
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDivider"
                android:padding="10dp"
                ></view>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelled_hint"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                ></TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0px"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="next">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_tag_faces_black_24dp"
                android:background="@drawable/bg5"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                ></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimaryText"
                ></TextView>
            <view
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDivider"
                android:padding="10dp"
                ></view>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile_hint"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                ></TextView>
    </LinearLayout>

</LinearLayout>


</LinearLayout>